// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Variant error Should render an error alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-4 {
  box-sizing: border-box;
  background-color: rgb(255,233,231);
  border-color: rgb(222,88,88);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-0 {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(226,37,37);
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="alert"
  >
    <div
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextError"
          display="block"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="15"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="15"
            >
              error: 
            </title>
            <path
              d="M13.247 4.517l6.236 6.236a1.764 1.764 0 010 2.494l-6.236 6.236a1.764 1.764 0 01-2.494 0l-6.236-6.236a1.764 1.764 0 010-2.494l6.236-6.236a1.764 1.764 0 012.494 0zM12 14a1 1 0 100 2 1 1 0 000-2zm.01-5h-.02c-.604 0-1.073.592-.978 1.244l.428 2.238c.04.296.278.518.557.518h.006c.279 0 .516-.222.557-.518l.428-2.238c.095-.652-.367-1.237-.978-1.244z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an error alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variant error Should render an error alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-9 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-3 {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(112,117,120);
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.5rem;
}

.emotion-5 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(0,94,166);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: rgb(0,62,130);
}

.emotion-5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,62,130);
}

.emotion-5:active,
.emotion-5[data-active=true] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(3,44,94);
}

.emotion-8 {
  box-sizing: border-box;
  background-color: rgb(255,233,231);
  border-color: rgb(222,88,88);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-0 {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(226,37,37);
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="alert"
  >
    <div
      className="emotion-7"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextError"
          display="block"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="16"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="16"
            >
              error: 
            </title>
            <path
              d="M13.247 4.517l6.236 6.236a1.764 1.764 0 010 2.494l-6.236 6.236a1.764 1.764 0 01-2.494 0l-6.236-6.236a1.764 1.764 0 010-2.494l6.236-6.236a1.764 1.764 0 012.494 0zM12 14a1 1 0 100 2 1 1 0 000-2zm.01-5h-.02c-.604 0-1.073.592-.978 1.244l.428 2.238c.04.296.278.518.557.518h.006c.279 0 .516-.222.557-.518l.428-2.238c.095-.652-.367-1.237-.978-1.244z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an error alert
      </div>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          color="colorTextLink"
          cursor="pointer"
          disabled={false}
          display="inline-block"
          fontFamily="fontFamilyText"
          fontWeight="fontWeightSemibold"
          onClick={[MockFunction]}
          textDecoration="none"
          type="button"
          width="auto"
        >
          <span
            aria-hidden="false"
            className="emotion-4"
            display="flex"
            opacity="1"
            textDecoration="inherit"
          >
            <span
              className="emotion-3"
              color="colorTextIcon"
              display="block"
              size="sizeIcon30"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="17"
                height="100%"
                role="img"
                viewBox="0 0 24 24"
                width="100%"
              >
                <title
                  id="17"
                >
                  dismiss this alert
                </title>
                <path
                  d="M17.858 6.142a.475.475 0 01.055.606l-.05.061-5.191 5.19 5.191 5.192a.469.469 0 01-.005.667.475.475 0 01-.606.055l-.061-.05L12 12.671l-5.191 5.192a.469.469 0 01-.667-.005.475.475 0 01-.055-.606l.05-.061 5.191-5.192-5.191-5.19a.469.469 0 01.005-.667.475.475 0 01.606-.055l.061.05L12 11.327l5.191-5.19a.469.469 0 01.667.005z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Variant neutral Should render a neutral alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-4 {
  box-sizing: border-box;
  background-color: rgb(245,248,255);
  border-color: rgb(200,204,207);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-0 {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(112,117,120);
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="status"
  >
    <div
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextIcon"
          display="block"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="9"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="9"
            >
              information: 
            </title>
            <path
              d="M12 4a8 8 0 110 16 8 8 0 010-16zm0 7c-.26.01-.528.08-.707.24-.178.158-.292.355-.292.575v3.37c0 .21.11.428.292.577.173.14.457.247.707.237.26-.008.528-.078.707-.237.178-.16.292-.355.292-.577v-3.37a.766.766 0 00-.292-.575A1.14 1.14 0 0012 11zm0-3l-.266.036c-.17.047-.318.131-.441.253l-.156.198A.958.958 0 0011 8.98v.04a.728.728 0 00.086.378c.04.121.108.227.206.315.09.094.197.163.321.202.12.06.248.09.386.084l.266-.035c.17-.047.318-.131.441-.253l.156-.198A.958.958 0 0013 9.02v-.04a.728.728 0 00-.086-.378.721.721 0 00-.206-.315.757.757 0 00-.321-.202.767.767 0 00-.386-.084z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variant neutral Should render a neutral alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-9 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-8 {
  box-sizing: border-box;
  background-color: rgb(245,248,255);
  border-color: rgb(200,204,207);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-0 {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(112,117,120);
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.5rem;
}

.emotion-5 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(0,94,166);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: rgb(0,62,130);
}

.emotion-5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,62,130);
}

.emotion-5:active,
.emotion-5[data-active=true] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(3,44,94);
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="status"
  >
    <div
      className="emotion-7"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextIcon"
          display="block"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="10"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="10"
            >
              information: 
            </title>
            <path
              d="M12 4a8 8 0 110 16 8 8 0 010-16zm0 7c-.26.01-.528.08-.707.24-.178.158-.292.355-.292.575v3.37c0 .21.11.428.292.577.173.14.457.247.707.237.26-.008.528-.078.707-.237.178-.16.292-.355.292-.577v-3.37a.766.766 0 00-.292-.575A1.14 1.14 0 0012 11zm0-3l-.266.036c-.17.047-.318.131-.441.253l-.156.198A.958.958 0 0011 8.98v.04a.728.728 0 00.086.378c.04.121.108.227.206.315.09.094.197.163.321.202.12.06.248.09.386.084l.266-.035c.17-.047.318-.131.441-.253l.156-.198A.958.958 0 0013 9.02v-.04a.728.728 0 00-.086-.378.721.721 0 00-.206-.315.757.757 0 00-.321-.202.767.767 0 00-.386-.084z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an alert
      </div>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          color="colorTextLink"
          cursor="pointer"
          disabled={false}
          display="inline-block"
          fontFamily="fontFamilyText"
          fontWeight="fontWeightSemibold"
          onClick={[MockFunction]}
          textDecoration="none"
          type="button"
          width="auto"
        >
          <span
            aria-hidden="false"
            className="emotion-4"
            display="flex"
            opacity="1"
            textDecoration="inherit"
          >
            <span
              className="emotion-0"
              color="colorTextIcon"
              display="block"
              size="sizeIcon30"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="11"
                height="100%"
                role="img"
                viewBox="0 0 24 24"
                width="100%"
              >
                <title
                  id="11"
                >
                  dismiss this alert
                </title>
                <path
                  d="M17.858 6.142a.475.475 0 01.055.606l-.05.061-5.191 5.19 5.191 5.192a.469.469 0 01-.005.667.475.475 0 01-.606.055l-.061-.05L12 12.671l-5.191 5.192a.469.469 0 01-.667-.005.475.475 0 01-.055-.606l.05-.061 5.191-5.192-5.191-5.19a.469.469 0 01.005-.667.475.475 0 01.606-.055l.061.05L12 11.327l5.191-5.19a.469.469 0 01.667.005z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Variant warning Should render an warning alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-4 {
  box-sizing: border-box;
  background-color: rgb(255,236,216);
  border-color: rgb(242,133,16);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-0 {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(228,98,22);
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="alert"
  >
    <div
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextWarning"
          display="block"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="21"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="21"
            >
              warning: 
            </title>
            <path
              d="M10.684 5.744c.582-.992 2.05-.992 2.632 0l6.482 11.048c.577.984-.152 2.208-1.316 2.208H5.518c-1.164 0-1.893-1.224-1.316-2.208zM12 15a1 1 0 100 2 1 1 0 000-2zm.01-5h-.02l-.112.007c-.549.067-.955.626-.866 1.237l.428 2.238.02.095c.074.247.29.423.543.423l.091-.008a.59.59 0 00.466-.51l.428-2.238.011-.121c.025-.602-.416-1.116-.989-1.123z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an warning alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variant warning Should render an warning alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
}

.emotion-9 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-3 {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(112,117,120);
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.5rem;
}

.emotion-5 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-width: 0;
  border-style: solid;
  border-color: transparent;
  display: inline-block;
  outline: none;
  -webkit-transition: background-color 100ms ease-in,border-color 100ms ease-in;
  transition: background-color 100ms ease-in,border-color 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(0,94,166);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: rgb(0,62,130);
}

.emotion-5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,62,130);
}

.emotion-5:active,
.emotion-5[data-active=true] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(3,44,94);
}

.emotion-8 {
  box-sizing: border-box;
  background-color: rgb(255,236,216);
  border-color: rgb(242,133,16);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-0 {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(228,98,22);
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="alert"
  >
    <div
      className="emotion-7"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextWarning"
          display="block"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="22"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="22"
            >
              warning: 
            </title>
            <path
              d="M10.684 5.744c.582-.992 2.05-.992 2.632 0l6.482 11.048c.577.984-.152 2.208-1.316 2.208H5.518c-1.164 0-1.893-1.224-1.316-2.208zM12 15a1 1 0 100 2 1 1 0 000-2zm.01-5h-.02l-.112.007c-.549.067-.955.626-.866 1.237l.428 2.238.02.095c.074.247.29.423.543.423l.091-.008a.59.59 0 00.466-.51l.428-2.238.011-.121c.025-.602-.416-1.116-.989-1.123z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an warning alert
      </div>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          color="colorTextLink"
          cursor="pointer"
          disabled={false}
          display="inline-block"
          fontFamily="fontFamilyText"
          fontWeight="fontWeightSemibold"
          onClick={[MockFunction]}
          textDecoration="none"
          type="button"
          width="auto"
        >
          <span
            aria-hidden="false"
            className="emotion-4"
            display="flex"
            opacity="1"
            textDecoration="inherit"
          >
            <span
              className="emotion-3"
              color="colorTextIcon"
              display="block"
              size="sizeIcon30"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="23"
                height="100%"
                role="img"
                viewBox="0 0 24 24"
                width="100%"
              >
                <title
                  id="23"
                >
                  dismiss this alert
                </title>
                <path
                  d="M17.858 6.142a.475.475 0 01.055.606l-.05.061-5.191 5.19 5.191 5.192a.469.469 0 01-.005.667.475.475 0 01-.606.055l-.061-.05L12 12.671l-5.191 5.192a.469.469 0 01-.667-.005.475.475 0 01-.055-.606l.05-.061 5.191-5.192-5.191-5.19a.469.469 0 01.005-.667.475.475 0 01.606-.055l.061.05L12 11.327l5.191-5.19a.469.469 0 01.667.005z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;
